[Curl] The function cookiesForDOM() does not behave correctly. https://bugs.webkit.org/show_bug.cgi?id=109923

Patch by peavo@outlook.com <peavo@outlook.com> on 2013-02-18
Reviewed by Brent Fulgham.

The cookiesForDOM() function should return a list of matching cookies, both persistent and session cookies.

* platform/network/curl/CookieJarCurl.cpp:
(WebCore::readCurlCookieToken): Added function to read next token from Curl cookie string.
(WebCore::addMatchingCurlCookie): Added function to add matching cookies to cookie list.
(WebCore::setCookiesFromDOM): Add domain and path from url to cookie if not already set.
(WebCore::cookiesForDOM): Return a list of matching cookies, both session and persistent cookies.

Canonical link: https://commits.webkit.org/128461@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@143272 268f45cc-cd09-0410-ab3c-d52691b4dbfc